--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@toast-ui/react-calendar": "^1.0.5",
+    "axios": "^0.25.0",
     "date-fns": "^2.27.0",
     "history": "^5.1.0",
     "react": "^17.0.2",
