--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "workbench.colorTheme": "Default Light+"
+    "workbench.colorTheme": "Slack Theme Aubergine Dark",
+    "workbench.commandPalette.history": 80
 }
