--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/pickers": "^3.2.10",
+    "@mui/icons-material": "^5.3.1",
     "@mui/lab": "^5.0.0-alpha.62",
-    "@mui/material": "^5.2.6",
+    "@mui/material": "^5.3.1",
     "@testing-library/jest-dom": "^5.16.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -23,10 +24,12 @@
     "history": "^5.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-error-overlay": "^6.0.10",
     "react-hook-form": "^7.22.0",
     "react-router": "^6.1.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "recoil": "^0.5.2",
     "tui-calendar": "^1.15.1",
     "web-vitals": "^1.1.2"
   },
