turi : explore 생성중

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "workbench.colorTheme": "Slack Theme Aubergine Dark",
-    "workbench.commandPalette.history": 80
+  "workbench.colorTheme": "Community Material Theme High Contrast",
+  "workbench.commandPalette.history": 80
 }
