--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@date-io/moment": "^2.11.0",
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
+    "@material-table/core": "^0.2.20",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/pickers": "^3.2.10",
@@ -24,7 +25,6 @@
     "history": "^5.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-error-overlay": "^6.0.10",
     "react-hook-form": "^7.22.0",
     "react-router": "^6.1.1",
     "react-router-dom": "^5.3.0",
@@ -56,5 +56,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-error-overlay": "^6.0.9"
   }
 }
