--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-  "workbench.colorTheme": "Community Material Theme High Contrast",
+  "workbench.colorTheme": "Community Material Theme",
   "workbench.commandPalette.history": 80
 }
