--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@testing-library/user-event": "^12.8.3",
     "@toast-ui/react-calendar": "^1.0.5",
     "axios": "^0.25.0",
+    "cors": "^2.8.5",
     "date-fns": "^2.27.0",
     "history": "^5.1.0",
     "immutable": "^4.0.0",
