kenna: build: 배포 오류 수정
- 폰트 CDN 의 주소가 https 가 아니라 차단됨
- 폰트 CDN 주소 https 로 변경

--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
+    "gh-pages": "^4.0.0",
     "react-error-overlay": "^6.0.9"
   }
 }
