--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "todomate-clone-project",
+  "homepage": "https://kenna-hwa.github.io/clonemate-front/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -43,7 +44,9 @@
     "start": "set PORT=8080 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -65,6 +68,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
+    "gh-pages": "^4.0.0",
     "react-error-overlay": "^6.0.9"
   }
 }
