--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "recoil": "^0.5.2",
+    "sass": "^1.54.5",
     "tui-calendar": "^1.15.1",
     "web-vitals": "^1.1.2"
   },
