--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cors": "^2.8.5",
     "date-fns": "^2.27.0",
     "history": "^5.1.0",
+    "http-proxy-middleware": "^2.0.6",
     "immutable": "^4.0.0",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
@@ -69,5 +70,6 @@
     "babel-eslint": "^10.1.0",
     "gh-pages": "^4.0.0",
     "react-error-overlay": "^6.0.9"
-  }
+  },
+  "proxy": "http://13.125.221.64:8080"
 }
